components/ui/button.module.css
.btn {
  width: 18.75rem;
  text-decoration: none;
  cursor: pointer;
  border-radius: 8px;
  padding: 0.5rem 1.5rem;
  text-align: center;
  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
  background-color: white;
  border: 1px solid #111111;
  color: #000000;
}

.btnStart {
  display: block;
  background-color: #03be9f;
  border: 1px solid #03be9f;
  color: #dafff7;
  align-self: center;
}

.btn:hover,
.btn:active {
  background-color: #eeeeee;
  border-color: #eeeeee;
}

.btnStart:hover,
.btnStart:active {
  background-color: #ffffff;
  border-color: #ffffff;
  color: #000000;
}

@media (min-width: 768px) {
  .btnStart {
    display: block;
    background-color: #03be9f;
    border: 1px solid #03be9f;
    color: #dafff7;
    align-self: start;
  }
}

